load("@bazeldnf//bazeldnf:defs.bzl", "bazeldnf", "rpm", "rpmtree", "tar2files")
load(":centos_stream.bzl", "centos_stream_alias", "centos_stream_config_settings")

# Define config settings for CentOS Stream version selection
centos_stream_config_settings()

# CentOS Stream 9 sandbox targets
bazeldnf(
    name = "sandbox_x86_64_cs9",
    command = "sandbox",
    tar = ":sandboxroot_x86_64_cs9",
)

bazeldnf(
    name = "sandbox_aarch64_cs9",
    command = "sandbox",
    tar = ":sandboxroot_aarch64_cs9",
)

bazeldnf(
    name = "sandbox_s390x_cs9",
    command = "sandbox",
    tar = ":sandboxroot_s390x_cs9",
)

# CentOS Stream 10 sandbox targets
bazeldnf(
    name = "sandbox_x86_64_cs10",
    command = "sandbox",
    tar = ":sandboxroot_x86_64_cs10",
)

bazeldnf(
    name = "sandbox_aarch64_cs10",
    command = "sandbox",
    tar = ":sandboxroot_aarch64_cs10",
)

bazeldnf(
    name = "sandbox_s390x_cs10",
    command = "sandbox",
    tar = ":sandboxroot_s390x_cs10",
)

# CentOS Stream 9 ldd targets
bazeldnf(
    name = "ldd_x86_64_cs9",
    command = "ldd",
    libs = [
        "/usr/lib64/libvirt-admin.so.0",
        "/usr/lib64/libvirt-lxc.so.0",
        "/usr/lib64/libvirt-qemu.so.0",
        "/usr/lib64/libvirt.so.0",
        "/usr/lib64/libkrb5support.so.0",
        "/usr/lib64/libkeyutils.so.1",
        "/usr/lib64/liblz4.so.1",
        "/usr/lib64/libmount.so.1",
    ],
    rpmtree = ":libvirt-devel_x86_64_cs9",
    rulename = "libvirt-libs_x86_64_cs9",
)

bazeldnf(
    name = "ldd_aarch64_cs9",
    command = "ldd",
    libs = [
        "/usr/lib64/libvirt-admin.so.0",
        "/usr/lib64/libvirt-lxc.so.0",
        "/usr/lib64/libvirt-qemu.so.0",
        "/usr/lib64/libvirt.so.0",
        "/usr/lib64/libkrb5support.so.0",
        "/usr/lib64/libkeyutils.so.1",
        "/usr/lib64/liblz4.so.1",
        "/usr/lib64/libmount.so.1",
    ],
    rpmtree = ":libvirt-devel_aarch64_cs9",
    rulename = "libvirt-libs_aarch64_cs9",
)

bazeldnf(
    name = "ldd_s390x_cs9",
    command = "ldd",
    libs = [
        "/usr/lib64/libvirt-admin.so.0",
        "/usr/lib64/libvirt-lxc.so.0",
        "/usr/lib64/libvirt-qemu.so.0",
        "/usr/lib64/libvirt.so.0",
        "/usr/lib64/libkrb5support.so.0",
        "/usr/lib64/libkeyutils.so.1",
        "/usr/lib64/liblz4.so.1",
        "/usr/lib64/libmount.so.1",
    ],
    rpmtree = ":libvirt-devel_s390x_cs9",
    rulename = "libvirt-libs_s390x_cs9",
)

# CentOS Stream 10 ldd targets
bazeldnf(
    name = "ldd_x86_64_cs10",
    command = "ldd",
    libs = [
        "/usr/lib64/libvirt-admin.so.0",
        "/usr/lib64/libvirt-lxc.so.0",
        "/usr/lib64/libvirt-qemu.so.0",
        "/usr/lib64/libvirt.so.0",
        "/usr/lib64/libkrb5support.so.0",
        "/usr/lib64/libkeyutils.so.1",
        "/usr/lib64/liblz4.so.1",
        "/usr/lib64/libmount.so.1",
    ],
    rpmtree = ":libvirt-devel_x86_64_cs10",
    rulename = "libvirt-libs_x86_64_cs10",
)

bazeldnf(
    name = "ldd_aarch64_cs10",
    command = "ldd",
    libs = [
        "/usr/lib64/libvirt-admin.so.0",
        "/usr/lib64/libvirt-lxc.so.0",
        "/usr/lib64/libvirt-qemu.so.0",
        "/usr/lib64/libvirt.so.0",
        "/usr/lib64/libkrb5support.so.0",
        "/usr/lib64/libkeyutils.so.1",
        "/usr/lib64/liblz4.so.1",
        "/usr/lib64/libmount.so.1",
    ],
    rpmtree = ":libvirt-devel_aarch64_cs10",
    rulename = "libvirt-libs_aarch64_cs10",
)

bazeldnf(
    name = "ldd_s390x_cs10",
    command = "ldd",
    libs = [
        "/usr/lib64/libvirt-admin.so.0",
        "/usr/lib64/libvirt-lxc.so.0",
        "/usr/lib64/libvirt-qemu.so.0",
        "/usr/lib64/libvirt.so.0",
        "/usr/lib64/libkrb5support.so.0",
        "/usr/lib64/libkeyutils.so.1",
        "/usr/lib64/liblz4.so.1",
        "/usr/lib64/libmount.so.1",
    ],
    rpmtree = ":libvirt-devel_s390x_cs10",
    rulename = "libvirt-libs_s390x_cs10",
)

