load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "io_utils.go",
        "pod_servers.go",
        "utils.go",
        "vmi_servers.go",
    ],
    importpath = "kubevirt.io/kubevirt/tests",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/certificates/bootstrap:go_default_library",
        "//pkg/certificates/triple/cert:go_default_library",
        "//pkg/util:go_default_library",
        "//pkg/virt-config:go_default_library",
        "//pkg/virt-controller/services:go_default_library",
        "//pkg/virt-launcher/virtwrap/api:go_default_library",
        "//pkg/virt-operator/resource/generate/components:go_default_library",
        "//pkg/virt-operator/util:go_default_library",
        "//staging/src/kubevirt.io/api/core/v1:go_default_library",
        "//staging/src/kubevirt.io/client-go/kubecli:go_default_library",
        "//staging/src/kubevirt.io/client-go/log:go_default_library",
        "//tests/console:go_default_library",
        "//tests/containerdisk:go_default_library",
        "//tests/exec:go_default_library",
        "//tests/flags:go_default_library",
        "//tests/framework/checks:go_default_library",
        "//tests/framework/kubevirt:go_default_library",
        "//tests/framework/matcher:go_default_library",
        "//tests/libdv:go_default_library",
        "//tests/libnet:go_default_library",
        "//tests/libnode:go_default_library",
        "//tests/libstorage:go_default_library",
        "//tests/libvmi:go_default_library",
        "//tests/libwait:go_default_library",
        "//tests/testsuite:go_default_library",
        "//tests/util:go_default_library",
        "//tests/watcher:go_default_library",
        "//vendor/github.com/google/goexpect:go_default_library",
        "//vendor/github.com/onsi/ginkgo/v2:go_default_library",
        "//vendor/github.com/onsi/gomega:go_default_library",
        "//vendor/golang.org/x/crypto/ssh:go_default_library",
        "//vendor/k8s.io/api/apps/v1:go_default_library",
        "//vendor/k8s.io/api/core/v1:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/api/errors:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/api/resource:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/apis/meta/v1:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/fields:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/labels:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/runtime:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/runtime/schema:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/types:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/util/rand:go_default_library",
        "//vendor/k8s.io/client-go/kubernetes/scheme:go_default_library",
        "//vendor/k8s.io/client-go/rest:go_default_library",
        "//vendor/k8s.io/client-go/tools/portforward:go_default_library",
        "//vendor/k8s.io/client-go/transport/spdy:go_default_library",
        "//vendor/k8s.io/utils/pointer:go_default_library",
        "//vendor/kubevirt.io/containerized-data-importer-api/pkg/apis/core/v1beta1:go_default_library",
    ],
)

load(
    "@io_bazel_rules_docker//container:container.bzl",
    "container_image",
)

container_image(
    name = "conformance_image_base",
    testonly = True,
    architecture = select({
        "@io_bazel_rules_go//go/platform:linux_arm64": "arm64",
        "//conditions:default": "amd64",
    }),
    base = "//:passwd-image",
    directory = "/",
    files = [
        ":conformance-config.json",
    ],
    visibility = ["//visibility:public"],
)

container_image(
    name = "conformance_image",
    testonly = True,
    base = ":conformance_image_base",
    directory = "/usr/bin",
    entrypoint = ["/usr/bin/conformance"],
    files = [
        ":go_default_test",
        "//tests/conformance",
    ],
    visibility = ["//visibility:public"],
)

go_test(
    name = "go_default_test",
    srcs = [
        "access_test.go",
        "canary_upgrade_test.go",
        "clone_test.go",
        "config_test.go",
        "console_test.go",
        "container_disk_test.go",
        "credentials_test.go",
        "dryrun_test.go",
        "hyperv_test.go",
        "instancetype_test.go",
        "kubectl_test.go",
        "mdev_configuration_allocation_test.go",
        "nonroot_test.go",
        "pausing_test.go",
        "pool_test.go",
        "portforward_test.go",
        "replicaset_test.go",
        "security_features_test.go",
        "softreboot_test.go",
        "stability_test.go",
        "subresource_api_test.go",
        "swap_test.go",
        "sysprep_test.go",
        "template_test.go",
        "tests_suite_test.go",
        "usbredir_test.go",
        "version_test.go",
        "virt_control_plane_test.go",
        "vm_state_test.go",
        "vm_test.go",
        "vmi_cloudinit_hook_sidecar_test.go",
        "vmi_cloudinit_test.go",
        "vmi_configuration_test.go",
        "vmi_controller_test.go",
        "vmi_gpu_test.go",
        "vmi_headless_test.go",
        "vmi_hook_sidecar_test.go",
        "vmi_hostdev_test.go",
        "vmi_ignition_test.go",
        "vmi_iothreads_test.go",
        "vmi_kernel_boot_test.go",
        "vmi_lifecycle_test.go",
        "vmi_monitoring_test.go",
        "vmi_multiqueue_test.go",
        "vmi_sound_test.go",
        "vmi_tpm_test.go",
        "vmi_vsock_test.go",
        "vmidefaults_test.go",
        "vmipreset_test.go",
        "vnc_test.go",
        "windows_test.go",
    ],
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/apimachinery/patch:go_default_library",
        "//pkg/cloud-init:go_default_library",
        "//pkg/config:go_default_library",
        "//pkg/controller:go_default_library",
        "//pkg/hooks:go_default_library",
        "//pkg/hooks/v1alpha1:go_default_library",
        "//pkg/hooks/v1alpha2:go_default_library",
        "//pkg/network/dns:go_default_library",
        "//pkg/storage/backend-storage:go_default_library",
        "//pkg/testutils:go_default_library",
        "//pkg/util:go_default_library",
        "//pkg/util/cluster:go_default_library",
        "//pkg/util/hardware:go_default_library",
        "//pkg/util/net/dns:go_default_library",
        "//pkg/virt-api:go_default_library",
        "//pkg/virt-config:go_default_library",
        "//pkg/virt-controller/services:go_default_library",
        "//pkg/virt-controller/watch:go_default_library",
        "//pkg/virt-controller/watch/topology:go_default_library",
        "//pkg/virt-handler/device-manager:go_default_library",
        "//pkg/virt-handler/node-labeller/util:go_default_library",
        "//pkg/virt-launcher/virtwrap/api:go_default_library",
        "//pkg/virt-launcher/virtwrap/converter:go_default_library",
        "//pkg/virt-operator/resource/generate/components:go_default_library",
        "//pkg/virtctl/pause:go_default_library",
        "//pkg/virtctl/softreboot:go_default_library",
        "//pkg/virtctl/vm:go_default_library",
        "//staging/src/kubevirt.io/api/clone/v1alpha1:go_default_library",
        "//staging/src/kubevirt.io/api/core:go_default_library",
        "//staging/src/kubevirt.io/api/core/v1:go_default_library",
        "//staging/src/kubevirt.io/api/instancetype:go_default_library",
        "//staging/src/kubevirt.io/api/instancetype/v1alpha1:go_default_library",
        "//staging/src/kubevirt.io/api/instancetype/v1alpha2:go_default_library",
        "//staging/src/kubevirt.io/api/instancetype/v1beta1:go_default_library",
        "//staging/src/kubevirt.io/api/pool:go_default_library",
        "//staging/src/kubevirt.io/api/pool/v1alpha1:go_default_library",
        "//staging/src/kubevirt.io/api/snapshot:go_default_library",
        "//staging/src/kubevirt.io/api/snapshot/v1alpha1:go_default_library",
        "//staging/src/kubevirt.io/client-go/kubecli:go_default_library",
        "//staging/src/kubevirt.io/client-go/log:go_default_library",
        "//staging/src/kubevirt.io/client-go/reporter:go_default_library",
        "//staging/src/kubevirt.io/client-go/subresources:go_default_library",
        "//tests/clientcmd:go_default_library",
        "//tests/console:go_default_library",
        "//tests/containerdisk:go_default_library",
        "//tests/decorators:go_default_library",
        "//tests/exec:go_default_library",
        "//tests/flags:go_default_library",
        "//tests/framework/checks:go_default_library",
        "//tests/framework/cleanup:go_default_library",
        "//tests/framework/kubevirt:go_default_library",
        "//tests/framework/matcher:go_default_library",
        "//tests/hotplug:go_default_library",
        "//tests/infrastructure:go_default_library",
        "//tests/launchsecurity:go_default_library",
        "//tests/libdv:go_default_library",
        "//tests/libinfra:go_default_library",
        "//tests/libinstancetype:go_default_library",
        "//tests/libmigration:go_default_library",
        "//tests/libnet:go_default_library",
        "//tests/libnode:go_default_library",
        "//tests/libreplicaset:go_default_library",
        "//tests/libssh:go_default_library",
        "//tests/libstorage:go_default_library",
        "//tests/libvmi:go_default_library",
        "//tests/libwait:go_default_library",
        "//tests/migration:go_default_library",
        "//tests/monitoring:go_default_library",
        "//tests/network:go_default_library",
        "//tests/numa:go_default_library",
        "//tests/operator:go_default_library",
        "//tests/performance:go_default_library",
        "//tests/realtime:go_default_library",
        "//tests/reporter:go_default_library",
        "//tests/scale:go_default_library",
        "//tests/storage:go_default_library",
        "//tests/testsuite:go_default_library",
        "//tests/util:go_default_library",
        "//tests/virtctl:go_default_library",
        "//tests/virtiofs:go_default_library",
        "//tests/watcher:go_default_library",
        "//tools/vms-generator/utils:go_default_library",
        "//vendor/github.com/google/goexpect:go_default_library",
        "//vendor/github.com/gorilla/websocket:go_default_library",
        "//vendor/github.com/mitchellh/go-vnc:go_default_library",
        "//vendor/github.com/onsi/ginkgo/v2:go_default_library",
        "//vendor/github.com/onsi/ginkgo/v2/reporters:go_default_library",
        "//vendor/github.com/onsi/gomega:go_default_library",
        "//vendor/github.com/onsi/gomega/format:go_default_library",
        "//vendor/github.com/onsi/gomega/gmeasure:go_default_library",
        "//vendor/github.com/onsi/gomega/gstruct:go_default_library",
        "//vendor/github.com/onsi/gomega/types:go_default_library",
        "//vendor/github.com/pborman/uuid:go_default_library",
        "//vendor/k8s.io/api/apps/v1:go_default_library",
        "//vendor/k8s.io/api/authorization/v1:go_default_library",
        "//vendor/k8s.io/api/autoscaling/v1:go_default_library",
        "//vendor/k8s.io/api/core/v1:go_default_library",
        "//vendor/k8s.io/api/node/v1:go_default_library",
        "//vendor/k8s.io/api/policy/v1beta1:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/api/errors:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/api/resource:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/apis/meta/v1:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/apis/meta/v1beta1:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/runtime:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/types:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/util/intstr:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/util/json:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/util/rand:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/util/wait:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/watch:go_default_library",
        "//vendor/k8s.io/client-go/informers:go_default_library",
        "//vendor/k8s.io/client-go/kubernetes/typed/authorization/v1:go_default_library",
        "//vendor/k8s.io/client-go/plugin/pkg/client/auth:go_default_library",
        "//vendor/k8s.io/client-go/rest:go_default_library",
        "//vendor/k8s.io/client-go/tools/cache:go_default_library",
        "//vendor/k8s.io/client-go/util/retry:go_default_library",
        "//vendor/k8s.io/utils/pointer:go_default_library",
        "//vendor/kubevirt.io/containerized-data-importer-api/pkg/apis/core/v1beta1:go_default_library",
        "//vendor/kubevirt.io/qe-tools/pkg/ginkgo-reporters:go_default_library",
    ],
)
