load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["tools.go"],
    importpath = "kubevirt.io/kubevirt/tools",
    visibility = ["//visibility:public"],
    deps = [
        "//vendor/github.com/onsi/ginkgo/ginkgo:go_default_library",
        "//vendor/github.com/wadey/gocovmerge:go_default_library",
        "//vendor/mvdan.cc/sh/v3/cmd/shfmt:go_default_library",
    ],
)
